[package]
name = "amcl_wrapper"
version = "0.3.5"
authors = ["lovesh harchandani <lovesh.bond@gmail.com>"]
description = "Wapper over Milagro Cryptographic Library (version 3)"
repository = "https://github.com/lovesh/amcl_rust_wrapper"

license = "Apache-2.0"
edition = "2018"
exclude = [
    "fuzz/artifacts/*",
    "fuzz/corpus/*"
]

[features]
default = ["bls381"]
bls381 = []
bn254 = []
secp256k1 = []
ed25519 = []

[dependencies]
rand = "0.7"
lazy_static = "1.3.0"
byteorder = "1.3.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
zeroize = "1.1.0"
#tiny-keccak = "1.5"
sha3 = "0.8.2"
rayon = "1.3"
subtle-encoding = "0.5.0"

[dependencies.amcl]
package = "miracl_amcl"
version = "3.2.5"
features = ["bls381", "bn254", "secp256k1", "ed25519"]

