[package]
name = "amcl_wrapper_ml"
version = "0.5.0"
authors = ["lovesh harchandani <lovesh.bond@gmail.com>",  "Michael Lodder <redmike7@gmail.com>"]
description = "Wapper over Milagro Cryptographic Library (version 3)"
repository = "https://github.com/mikelodder7/amcl_rust_wrapper"

license = "Apache-2.0"
edition = "2018"
exclude = [
    "fuzz/artifacts/*",
    "fuzz/corpus/*"
]

[features]
default = ["bls381"]
bls381 = []
bn254 = []
secp256k1 = []
ed25519 = []

[dependencies]
arrayref = "0.3"
byteorder = "1.3"
lazy_static = "1.3"
rand = "0.7"
rayon = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.8"
sha3 = "0.8"
subtle-encoding = "0.5"
zeroize = "1.1"

[dependencies.hash2curve]
version = "0.0.6"
features = ["bls"]

[dependencies.amcl]
package = "amcl-milagro"
version = "3.2.6"
features = ["bls381", "bn254", "secp256k1", "ed25519"]

